# hello-proto

./: .gitignore  .travis.yml  README.md
ci/: build-and-run.sh
client/: .env  README.md  envoy.Dockerfile  envoy.yaml  generate.sh  package.json  tsconfig.json
client/public/: index.html
client/scripts/: generate.sh  proxy.sh  run-envoy.sh
client/src/: App.vue  main.ts  ts-shader-loader.d.ts
client/src/assets/shaders/: blocks.vert  debug.frag
client/src/components/: Canvas.vue  SendButton.vue
client/src/engine/: GameLoop.ts  SharedState.ts
client/src/graphics/: VertexArray.ts
client/src/minecraft/: Blocks.ts  MinecraftWorld.ts  ObservableWorld.ts  Observer.ts  Viewer.ts  ViewerUtil.ts
client/src/net/: MinecraftServer.ts
client/src/views/: Game.vue  Home.vue
protos/: CMakeLists.txt
protos/hello/: hello.proto
protos/minecraft/: components.proto  requests.proto  updates.proto  world.proto
protos/testing/: echo.proto
server/: CMakeLists.txt  Doxyfile
server/cmake/: CodeCoverage.cmake
server/src/: hello_server.cpp
server/src/exec/: async_server.hpp  connections.hpp  hello_server.cpp  minecraft_server_instance.cpp  server_states.hpp
server/src/mcs/: minecraft_server.cpp  minecraft_server.hpp  minecraft_world.cpp  minecraft_world.hpp  world_service.cpp  world_service.hpp
server/src/net/: async_server.hpp  connections.hpp  server_states.hpp  server_to_client_stream.hpp  tagger.cpp  tagger.hpp
server/src/testing/: hello_tests.cpp  hello_tests.hpp.in  test_client.cpp  test_client.hpp  test_service.cpp  test_service.h  testing.hpp
shared/: CMakeLists.txt
